--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T17:57:34.115120Z",
-     "start_time": "2021-05-19T17:57:33.816008Z"
+     "end_time": "2021-06-01T18:45:40.516990Z",
+     "start_time": "2021-06-01T18:45:40.334538Z"
     }
    },
    "outputs": [
@@ -37,8 +37,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T17:57:34.165244Z",
-     "start_time": "2021-05-19T17:57:34.116924Z"
+     "end_time": "2021-06-01T18:45:40.555801Z",
+     "start_time": "2021-06-01T18:45:40.518433Z"
     }
    },
    "outputs": [
@@ -152,8 +152,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T17:57:34.183066Z",
-     "start_time": "2021-05-19T17:57:34.166850Z"
+     "end_time": "2021-06-01T18:45:40.569480Z",
+     "start_time": "2021-06-01T18:45:40.557548Z"
     }
    },
    "outputs": [
@@ -253,8 +253,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T17:57:34.608213Z",
-     "start_time": "2021-05-19T17:57:34.184406Z"
+     "end_time": "2021-06-01T18:45:40.915791Z",
+     "start_time": "2021-06-01T18:45:40.571036Z"
     }
    },
    "outputs": [
@@ -280,8 +280,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T17:57:34.613839Z",
-     "start_time": "2021-05-19T17:57:34.609950Z"
+     "end_time": "2021-06-01T18:45:40.920587Z",
+     "start_time": "2021-06-01T18:45:40.917014Z"
     }
    },
    "outputs": [
@@ -305,8 +305,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T17:57:34.769019Z",
-     "start_time": "2021-05-19T17:57:34.615020Z"
+     "end_time": "2021-06-01T18:45:41.077036Z",
+     "start_time": "2021-06-01T18:45:40.921924Z"
     }
    },
    "outputs": [
@@ -340,8 +340,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T17:57:35.635744Z",
-     "start_time": "2021-05-19T17:57:34.770578Z"
+     "end_time": "2021-06-01T18:45:41.926644Z",
+     "start_time": "2021-06-01T18:45:41.078254Z"
     }
    },
    "outputs": [],
@@ -352,11 +352,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T18:54:21.806645Z",
-     "start_time": "2021-05-19T18:54:17.711318Z"
+     "end_time": "2021-06-01T20:46:25.808121Z",
+     "start_time": "2021-06-01T20:46:21.090398Z"
     }
    },
    "outputs": [
@@ -364,10 +364,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at roberta-base were not used when initializing RobertaForSequenceClassification: ['lm_head.dense.bias', 'roberta.pooler.dense.weight', 'roberta.pooler.dense.bias', 'lm_head.layer_norm.bias', 'lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.decoder.weight', 'lm_head.dense.weight']\n",
+      "Some weights of the model checkpoint at roberta-base were not used when initializing RobertaForSequenceClassification: ['lm_head.bias', 'lm_head.dense.weight', 'lm_head.layer_norm.bias', 'roberta.pooler.dense.weight', 'lm_head.decoder.weight', 'lm_head.dense.bias', 'roberta.pooler.dense.bias', 'lm_head.layer_norm.weight']\n",
       "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
-      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at roberta-base and are newly initialized: ['classifier.out_proj.bias', 'classifier.out_proj.weight', 'classifier.dense.weight', 'classifier.dense.bias']\n",
+      "Some weights of RobertaForSequenceClassification were not initialized from the model checkpoint at roberta-base and are newly initialized: ['classifier.dense.weight', 'classifier.out_proj.bias', 'classifier.out_proj.weight', 'classifier.dense.bias']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     },
@@ -667,12 +667,12 @@
        "  (classifier): RobertaClassificationHead(\n",
        "    (dense): Linear(in_features=768, out_features=768, bias=True)\n",
        "    (dropout): Dropout(p=0.1, inplace=False)\n",
-       "    (out_proj): Linear(in_features=768, out_features=1, bias=True)\n",
+       "    (out_proj): Linear(in_features=768, out_features=2, bias=True)\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,46 +681,57 @@
     "model_name = \"roberta-base\"\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name, cache_dir=MODEL_CACHE)\n",
-    "model = AutoModelForSequenceClassification.from_pretrained(model_name, cache_dir=MODEL_CACHE)\n",
     "\n",
-    "model.classifier.out_proj = torch.nn.Linear(model.classifier.out_proj.in_features, 1)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(\n",
+    "    model_name,\n",
+    "    cache_dir=MODEL_CACHE,\n",
+    "#     num_labels=1,\n",
+    "#     output_hidden_states=True,\n",
+    ")\n",
+    "\n",
+    "# model = AutoModel.from_pretrained(\n",
+    "#     model_name,\n",
+    "#     cache_dir=MODEL_CACHE,\n",
+    "# #     num_labels=1,\n",
+    "# #     output_hidden_states=True,\n",
+    "# )\n",
     "\n",
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T18:54:24.152856Z",
-     "start_time": "2021-05-19T18:54:24.112534Z"
+     "end_time": "2021-06-01T20:46:25.850411Z",
+     "start_time": "2021-06-01T20:46:25.809449Z"
     }
    },
    "outputs": [],
    "source": [
-    "inputs = tokenizer(\"Hello, my dog is cute\", return_tensors=\"pt\")\n",
+    "inputs = tokenizer(\"Hello, my dog is cute\", return_tensors=\"pt\", return_token_type_ids=True)\n",
     "labels = torch.tensor([1]).unsqueeze(0)  # Batch size 1\n",
     "outputs = model(**inputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-19T18:54:24.938750Z",
-     "start_time": "2021-05-19T18:54:24.934779Z"
+     "end_time": "2021-06-01T20:46:25.854831Z",
+     "start_time": "2021-06-01T20:46:25.851787Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.1054]], grad_fn=<AddmmBackward>)"
+       "tensor([[ 0.2652, -0.0305]], grad_fn=<AddmmBackward>)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,6 +745,58 @@
    "metadata": {},
    "source": [
     "# Folds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-01T20:46:25.858562Z",
+     "start_time": "2021-06-01T20:46:25.855821Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': tensor([[    0, 31414,     6,   127,  2335,    16, 11962,     2]]), 'token_type_ids': tensor([[0, 0, 0, 0, 0, 0, 0, 0]]), 'attention_mask': tensor([[1, 1, 1, 1, 1, 1, 1, 1]])}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-01T20:46:25.866815Z",
+     "start_time": "2021-06-01T20:46:25.859699Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "tuple index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-9d77483a2373>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moutputs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/kaggle/lib/python3.8/site-packages/transformers/file_utils.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, k)\u001b[0m\n\u001b[1;32m   1738\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0minner_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1739\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1740\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_tuple\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1741\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1742\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: tuple index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "outputs[1].shape"
    ]
   },
   {
