--- a/notebooks/heads.ipynb
+++ b/notebooks/heads.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:07.904198Z",
-     "start_time": "2021-06-05T09:50:06.664761Z"
+     "end_time": "2021-06-10T20:48:53.958150Z",
+     "start_time": "2021-06-10T20:48:52.777945Z"
     }
    },
    "outputs": [],
@@ -19,7 +19,7 @@
     "import torch.nn as nn\n",
     "\n",
     "INPUT_PATH = Path(f\"/mnt/storage_dimm2/kaggle_data/commonlitreadabilityprize\")\n",
-    "MODEL_CACHE = Path(\"/mnt/storage/model_cache/torch\")"
+    "MODEL_CACHE = Path(\"/mnt/storage/model_cache/huggingface\")"
    ]
   },
   {
@@ -27,8 +27,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:07.909776Z",
-     "start_time": "2021-06-05T09:50:07.905943Z"
+     "end_time": "2021-06-10T20:48:53.962813Z",
+     "start_time": "2021-06-10T20:48:53.959405Z"
     }
    },
    "outputs": [],
@@ -57,8 +57,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:12.942331Z",
-     "start_time": "2021-06-05T09:50:07.911029Z"
+     "end_time": "2021-06-10T20:49:52.053419Z",
+     "start_time": "2021-06-10T20:48:53.963739Z"
     }
    },
    "outputs": [
@@ -66,7 +66,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at roberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.decoder.weight', 'lm_head.dense.weight', 'lm_head.layer_norm.weight', 'lm_head.bias']\n",
+      "Downloading: 100%|██████████| 1.36M/1.36M [00:00<00:00, 1.44MB/s]\n",
+      "Downloading: 100%|██████████| 501M/501M [00:50<00:00, 9.86MB/s] \n",
+      "Some weights of the model checkpoint at roberta-base were not used when initializing RobertaModel: ['lm_head.layer_norm.bias', 'lm_head.dense.weight', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.dense.bias', 'lm_head.bias']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -402,8 +404,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.342006Z",
-     "start_time": "2021-06-05T09:50:12.943420Z"
+     "end_time": "2021-06-10T20:49:52.481073Z",
+     "start_time": "2021-06-10T20:49:52.055212Z"
     }
    },
    "outputs": [],
@@ -424,8 +426,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.347002Z",
-     "start_time": "2021-06-05T09:50:13.343379Z"
+     "end_time": "2021-06-10T20:49:52.485583Z",
+     "start_time": "2021-06-10T20:49:52.482520Z"
     }
    },
    "outputs": [
@@ -449,8 +451,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.357704Z",
-     "start_time": "2021-06-05T09:50:13.348399Z"
+     "end_time": "2021-06-10T20:49:52.497715Z",
+     "start_time": "2021-06-10T20:49:52.486619Z"
     }
    },
    "outputs": [],
@@ -475,8 +477,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.363762Z",
-     "start_time": "2021-06-05T09:50:13.359949Z"
+     "end_time": "2021-06-10T20:49:52.501442Z",
+     "start_time": "2021-06-10T20:49:52.498772Z"
     }
    },
    "outputs": [
@@ -501,8 +503,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.379301Z",
-     "start_time": "2021-06-05T09:50:13.365422Z"
+     "end_time": "2021-06-10T20:49:52.540240Z",
+     "start_time": "2021-06-10T20:49:52.502441Z"
     }
    },
    "outputs": [
@@ -527,8 +529,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.408441Z",
-     "start_time": "2021-06-05T09:50:13.380521Z"
+     "end_time": "2021-06-10T20:49:52.552218Z",
+     "start_time": "2021-06-10T20:49:52.542020Z"
     }
    },
    "outputs": [],
@@ -551,8 +553,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.426927Z",
-     "start_time": "2021-06-05T09:50:13.409541Z"
+     "end_time": "2021-06-10T20:49:52.584192Z",
+     "start_time": "2021-06-10T20:49:52.553528Z"
     }
    },
    "outputs": [
@@ -577,8 +579,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.434608Z",
-     "start_time": "2021-06-05T09:50:13.427912Z"
+     "end_time": "2021-06-10T20:49:52.594122Z",
+     "start_time": "2021-06-10T20:49:52.586085Z"
     }
    },
    "outputs": [
@@ -621,8 +623,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.437851Z",
-     "start_time": "2021-06-05T09:50:13.435617Z"
+     "end_time": "2021-06-10T20:49:52.598793Z",
+     "start_time": "2021-06-10T20:49:52.596093Z"
     }
    },
    "outputs": [
@@ -643,11 +645,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T09:50:13.452839Z",
-     "start_time": "2021-06-05T09:50:13.438800Z"
+     "end_time": "2021-06-10T20:53:50.754093Z",
+     "start_time": "2021-06-10T20:53:50.738769Z"
     }
    },
    "outputs": [
@@ -655,7 +657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([12, 2, 256, 768])\n"
+      "torch.Size([2, 256, 1536])\n"
      ]
     },
     {
@@ -664,7 +666,7 @@
        "torch.Size([2, 3072])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,6 +678,7 @@
     "out_mean = torch.mean(out, dim=0)\n",
     "out_max, _ = torch.max(out, dim=0)\n",
     "out = torch.cat((out_mean, out_max), dim=-1)\n",
+    "print(out.shape)\n",
     "out_mean = torch.mean(out, dim=1)\n",
     "out_max, _ = torch.max(out, dim=1)\n",
     "out = torch.cat((out_mean, out_max), dim=-1)\n",
@@ -687,8 +690,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-05T11:42:08.607812Z",
-     "start_time": "2021-06-05T11:42:08.603452Z"
+     "end_time": "2021-06-10T20:49:52.615060Z",
+     "start_time": "2021-06-10T20:49:52.612412Z"
     }
    },
    "outputs": [
@@ -705,6 +708,31 @@
    ],
    "source": [
     "3072 / 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-10T20:50:34.124881Z",
+     "start_time": "2021-06-10T20:50:34.120706Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 256, 768])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "outputs[0].shape"
    ]
   },
   {
