--- a/notebooks/features.ipynb
+++ b/notebooks/features.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T10:14:21.166127Z",
-     "start_time": "2021-06-08T10:14:20.663654Z"
+     "end_time": "2021-06-14T07:39:32.647213Z",
+     "start_time": "2021-06-14T07:39:32.047962Z"
     }
    },
    "outputs": [],
@@ -33,8 +33,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T10:14:21.208782Z",
-     "start_time": "2021-06-08T10:14:21.167644Z"
+     "end_time": "2021-06-14T07:39:32.697539Z",
+     "start_time": "2021-06-14T07:39:32.648555Z"
     }
    },
    "outputs": [
@@ -175,8 +175,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T10:14:21.212939Z",
-     "start_time": "2021-06-08T10:14:21.210009Z"
+     "end_time": "2021-06-14T07:39:32.701474Z",
+     "start_time": "2021-06-14T07:39:32.698835Z"
     }
    },
    "outputs": [
@@ -209,11 +209,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T11:52:22.340713Z",
-     "start_time": "2021-06-08T11:52:21.603585Z"
+     "end_time": "2021-06-14T07:39:35.065382Z",
+     "start_time": "2021-06-14T07:39:32.708593Z"
     }
    },
    "outputs": [
@@ -241,6 +241,7 @@
        "      <th>sentence_count</th>\n",
        "      <th>lexicon_count</th>\n",
        "      <th>flesch_reading_ease</th>\n",
+       "      <th>smog_index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -249,45 +250,50 @@
        "      <td>19</td>\n",
        "      <td>138</td>\n",
        "      <td>97.91</td>\n",
+       "      <td>6.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10</td>\n",
        "      <td>180</td>\n",
        "      <td>61.67</td>\n",
+       "      <td>12.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>6</td>\n",
        "      <td>188</td>\n",
        "      <td>73.55</td>\n",
+       "      <td>9.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>5</td>\n",
        "      <td>170</td>\n",
        "      <td>70.81</td>\n",
+       "      <td>10.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>6</td>\n",
        "      <td>166</td>\n",
        "      <td>51.82</td>\n",
+       "      <td>14.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   sentence_count  lexicon_count  flesch_reading_ease\n",
-       "0              19            138                97.91\n",
-       "1              10            180                61.67\n",
-       "2               6            188                73.55\n",
-       "3               5            170                70.81\n",
-       "4               6            166                51.82"
+       "   sentence_count  lexicon_count  flesch_reading_ease  smog_index\n",
+       "0              19            138                97.91         6.3\n",
+       "1              10            180                61.67        12.3\n",
+       "2               6            188                73.55         9.7\n",
+       "3               5            170                70.81        10.4\n",
+       "4               6            166                51.82        14.6"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +304,7 @@
     "        \"sentence_count\": textstat.sentence_count(text),\n",
     "        \"lexicon_count\": textstat.lexicon_count(text),\n",
     "        \"flesch_reading_ease\": textstat.flesch_reading_ease(text),\n",
-    "#         \"smog_index\": textstat.smog_index(text),\n",
+    "        \"smog_index\": textstat.smog_index(text),\n",
     "#         \"flesch_kincaid_grade\": textstat.flesch_kincaid_grade(text),\n",
     "    }\n",
     "\n",
@@ -309,11 +315,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T11:52:31.354563Z",
-     "start_time": "2021-06-08T11:52:31.337793Z"
+     "end_time": "2021-06-14T07:39:35.081757Z",
+     "start_time": "2021-06-14T07:39:35.066494Z"
     }
    },
    "outputs": [
@@ -341,11 +347,13 @@
        "      <th>sentence_count</th>\n",
        "      <th>lexicon_count</th>\n",
        "      <th>flesch_reading_ease</th>\n",
+       "      <th>smog_index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
+       "      <td>2834.000000</td>\n",
        "      <td>2834.000000</td>\n",
        "      <td>2834.000000</td>\n",
        "      <td>2834.000000</td>\n",
@@ -355,60 +363,67 @@
        "      <td>8.564220</td>\n",
        "      <td>172.948483</td>\n",
        "      <td>67.742121</td>\n",
+       "      <td>10.308363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>3.666797</td>\n",
        "      <td>16.974894</td>\n",
        "      <td>17.530230</td>\n",
+       "      <td>3.298237</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>2.000000</td>\n",
        "      <td>135.000000</td>\n",
        "      <td>-22.930000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>6.000000</td>\n",
        "      <td>159.000000</td>\n",
        "      <td>57.510000</td>\n",
+       "      <td>8.100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>8.000000</td>\n",
        "      <td>175.000000</td>\n",
        "      <td>69.010000</td>\n",
+       "      <td>10.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>10.000000</td>\n",
        "      <td>187.000000</td>\n",
        "      <td>80.110000</td>\n",
+       "      <td>12.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>38.000000</td>\n",
        "      <td>205.000000</td>\n",
        "      <td>114.520000</td>\n",
+       "      <td>22.900000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       sentence_count  lexicon_count  flesch_reading_ease\n",
-       "count     2834.000000    2834.000000          2834.000000\n",
-       "mean         8.564220     172.948483            67.742121\n",
-       "std          3.666797      16.974894            17.530230\n",
-       "min          2.000000     135.000000           -22.930000\n",
-       "25%          6.000000     159.000000            57.510000\n",
-       "50%          8.000000     175.000000            69.010000\n",
-       "75%         10.000000     187.000000            80.110000\n",
-       "max         38.000000     205.000000           114.520000"
+       "       sentence_count  lexicon_count  flesch_reading_ease   smog_index\n",
+       "count     2834.000000    2834.000000          2834.000000  2834.000000\n",
+       "mean         8.564220     172.948483            67.742121    10.308363\n",
+       "std          3.666797      16.974894            17.530230     3.298237\n",
+       "min          2.000000     135.000000           -22.930000     0.000000\n",
+       "25%          6.000000     159.000000            57.510000     8.100000\n",
+       "50%          8.000000     175.000000            69.010000    10.300000\n",
+       "75%         10.000000     187.000000            80.110000    12.500000\n",
+       "max         38.000000     205.000000           114.520000    22.900000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,11 +434,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T10:14:23.042828Z",
-     "start_time": "2021-06-08T10:14:22.849786Z"
+     "end_time": "2021-06-14T07:39:35.302361Z",
+     "start_time": "2021-06-14T07:39:35.083108Z"
     }
    },
    "outputs": [
@@ -453,11 +468,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T10:14:23.321229Z",
-     "start_time": "2021-06-08T10:14:23.044235Z"
+     "end_time": "2021-06-14T07:39:35.663777Z",
+     "start_time": "2021-06-14T07:39:35.303722Z"
     }
    },
    "outputs": [],
@@ -469,11 +484,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-08T10:14:23.327315Z",
-     "start_time": "2021-06-08T10:14:23.322992Z"
+     "end_time": "2021-06-14T07:39:35.669857Z",
+     "start_time": "2021-06-14T07:39:35.665211Z"
     }
    },
    "outputs": [],
